[tool.poetry]
name = "simple-currency-cache"
version = "0.1.0"
description = ""
authors = ["Joaqim Planstedt <gpg@joaqim.xyz>"]
readme = "README.md"
packages = [{include = "simple_currency_cache"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
diskcache = "^5.6.1"


[tool.poetry.group.dev.dependencies]
requests = "^2.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
